--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,55 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.image-header{
+  height: 100%;
+  margin-right: 6px;
 }
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.header{
+  height: 65px;
+  align-items: center;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  padding: 20px;
+  width:550px;
+  background-color: #672280;
+  color:#fff;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.react-course{
+ margin-left:50px;
+ padding-top:10px;
 }
-button:hover {
-  border-color: #646cff;
+.container{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.meme-image{
+  width: 447px;
+  position:absolute;
+  margin-top: -90px;
+ 
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.input{
+width:230px;
+height:35px;
+border-radius: 5px;
+display: flex;
+}
+.input2{
+  margin-left:20px ;
+}
+.submit{
+  width: 447px;
+  height: 40px;
+  margin-top:20px;
+  background-color: #672280;
+  border-radius: 5px;
+  color:#fff;
+}
+.form-container{
+  padding: 20px;
 }
